--- a/TruckEntryList/App.config
+++ b/TruckEntryList/App.config
@@ -1,11 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="TruckEntryList.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="TruckEntryList.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <startup> 
         
     <supportedRuntime version="v2.0.50727"/></startup>
+    <applicationSettings>
+        <TruckEntryList.Properties.Settings>
+            <setting name="hourZone" serializeAs="String">
+                <value>0.2</value>
+            </setting>
+            <setting name="nrAutoZone" serializeAs="String">
+                <value>0.45</value>
+            </setting>
+            <setting name="payloadZone" serializeAs="String">
+                <value>0.25</value>
+            </setting>
+            <setting name="nextTrucksZone" serializeAs="String">
+                <value>0.1</value>
+            </setting>
+            <setting name="settingsFilePath" serializeAs="String">
+                <value>./settings.dat</value>
+            </setting>
+        </TruckEntryList.Properties.Settings>
+    </applicationSettings>
 </configuration>
