Finished Raports; Added Settings Entry for RaportsFolderPath

--- a/TruckEntryList/App.config
+++ b/TruckEntryList/App.config
@@ -25,6 +25,9 @@
             <setting name="settingsFilePath" serializeAs="String">
                 <value>./settings.dat</value>
             </setting>
+            <setting name="raportFolder" serializeAs="String">
+                <value>./Rapoarte</value>
+            </setting>
         </TruckEntryList.Properties.Settings>
     </applicationSettings>
 </configuration>
