--- a/TruckEntryList/TruckEntryList.csproj
+++ b/TruckEntryList/TruckEntryList.csproj
@@ -80,6 +80,12 @@
     <Compile Include="PresenterSettings.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RaportSelect.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RaportSelect.Designer.cs">
+      <DependentUpon>RaportSelect.cs</DependentUpon>
+    </Compile>
     <Compile Include="Settings.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -103,6 +109,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="RaportSelect.resx">
+      <DependentUpon>RaportSelect.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Settings.resx">
       <DependentUpon>Settings.cs</DependentUpon>
     </EmbeddedResource>
@@ -129,6 +138,11 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <None Include="settings.png" />
+    <None Include="raport.png" />
+    <None Include="presenter.png" />
+    <None Include="next.png" />
+    <None Include="add.png" />
     <Content Include="AppIcon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
