--- a/TruckEntryList/packages.config
+++ b/TruckEntryList/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Costura.Fody" version="1.3.3.0" targetFramework="net4" userInstalled="true" />
-  <package id="Fody" version="1.26.1" targetFramework="net4" userInstalled="true" />
+  <package id="Fody" version="1.26.2-beta1" targetFramework="net4" userInstalled="true" />
   <package id="Svg" version="2.0.0" targetFramework="net4" userInstalled="true" />
 </packages>
