--- a/TruckEntryList/TruckEntryList.csproj
+++ b/TruckEntryList/TruckEntryList.csproj
@@ -72,7 +72,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FileManager.cs" />
+    <Compile Include="FixedObjectFileStream.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
